tests/smt2/error/rollback.smt2
(declare-sort R)
(declare-const p Bool)
(declare-fun q (R) Bool)
(declare-const a R)
(declare-const b R)
(assert (and p (q a) (= a b) bad))
(assert (and (= a b) (q a) p bad))
(check-sat-assuming ((not p)))
(check-sat-assuming ((not (q b))))
(check-sat-assuming ((not (q a))))
(check-sat-assuming ((distinct a b)))